--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 		<h3>SOCIAL</h3>
 	</section>
 <!-- End of one-fourth Seciton here -->
-  	<section class="inner-wrapper">
+  	<section class="inner-wrapper group">
   		<article id="tablet">
   			<img src="img/hand_ipad.png">
   		</article>
-  		<aside id="tablet">
+  		<aside id="tablet2">
   			<h2>MOBILE. TABLET. DESKTOP.</h2>
   			<p>It is a long established fact that a reader will be distracted by the readable content of a 
 				  page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less 
@@ -70,12 +70,12 @@
 				Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model 
 				text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
 		</article>
-		<aside class="mobile">
+		<aside class="hand-mobile">
 			<img src="img/hand_mobile.png">
 		</aside>
 	</section>
 	<section class="inner-wrapper">
-		<article id="desktop">
+		<article>
 			<img src="img/desktop.png">
 		</article>
 		<aside id="desktop">
@@ -114,7 +114,7 @@
 		<h2>: )</h2>
 	</section>
 <!-- End of smiley section -->
-	<footer>
+	<footer class="footer">
 		<ul class="social">
 			<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 			<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
